Update VOCUS 2023-03-27 patch

--- a/_posts/2022-05-31-VOCUS-中學以下的素養教育與經驗談-國二下數學篇-數列.html
+++ b/_posts/2022-05-31-VOCUS-中學以下的素養教育與經驗談-國二下數學篇-數列.html
@@ -33,14 +33,14 @@ author: 王立第二戰研所
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">範例：</span>五個正方形用面積由小而大排列，已知最大的面積100，最小的為4，且邊長變化為等差數列，請問第三個正方形面積多少？</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">解答：</span>由於面積為邊長的平方，而邊長為等差排列，所以(a1)^2=4，以及(a5)^2=100，故a1=2、a5=10。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:335px" class="image-block-prerender" data-src="https://images.vocus.cc/c540b326-8b7b-47d3-96ef-df6eefade7e3.png" data-width="335" data-height="145" data-position="center" src="https://images.vocus.cc/c540b326-8b7b-47d3-96ef-df6eefade7e3.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/c540b326-8b7b-47d3-96ef-df6eefade7e3.png" data-width="335" data-height="145" data-position="center" src="https://images.vocus.cc/c540b326-8b7b-47d3-96ef-df6eefade7e3.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">面積為6^2=36。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">真的別懷疑，很多學生遇到這種需要轉一個彎的就倒了，原因一般是這樣：眼睛看著100跟4，拼命想找出中間其他三個正方形的面積規律。</div>
 <div class="draft-block draft--p left">我們也可以說，這是一種很容易看錯重點，或是被轉移目光的特性，但現實來說這種人還不少，但再怎樣只要題目看熟，知道重點在「邊長」而不是面積，好像都還好。下面這種常見題型就是容易炸掉的部分。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">範例：</span>已知有金字塔圖形如下，總共疊了十層，請問黑球跟白球各有幾顆？</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:317px" class="image-block-prerender" data-src="https://images.vocus.cc/75bf3d5b-5975-427c-b76e-ad16a3a42b37.jpg" data-width="317" data-height="300" data-position="center" src="https://images.vocus.cc/75bf3d5b-5975-427c-b76e-ad16a3a42b37.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">數列從最頂端開始</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/75bf3d5b-5975-427c-b76e-ad16a3a42b37.jpg" data-width="317" data-height="300" data-position="center" src="https://images.vocus.cc/75bf3d5b-5975-427c-b76e-ad16a3a42b37.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">數列從最頂端開始</figcaption></div></figure>
 <div class="draft-block draft--p left">解答：從頂端往下，已知每隔2層才會增加1顆，所以每層的</div>
 <ul>
   <li class="draft-block draft--li">黑球數列：1、1、2、2、3、3、4、4、5、5</li>
@@ -48,16 +48,16 @@ author: 王立第二戰研所
 </ul>
 <div class="draft-block draft--p left">黑球實際上是兩個1、2、3、4、5的數列，或加起來為2、4、6、8、10的數列；白球差了一樓少5顆，所以只算黑的就好。</div>
 <div class="draft-block draft--p left">總和代公式為：</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:515px" class="image-block-prerender" data-src="https://images.vocus.cc/b47b7f5a-b1b0-4de9-9dce-2b4701a05d05.png" data-width="515" data-height="180" data-position="center" src="https://images.vocus.cc/b47b7f5a-b1b0-4de9-9dce-2b4701a05d05.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/b47b7f5a-b1b0-4de9-9dce-2b4701a05d05.png" data-width="515" data-height="180" data-position="center" src="https://images.vocus.cc/b47b7f5a-b1b0-4de9-9dce-2b4701a05d05.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">黑球30顆，白球25顆。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">學生很容易在這邊，眼睛盯著黑的忘不了白的，或是堅持覺得數列只有一種排法，每一層都會有一個公差。遇到這種兩個相疊成的數列，或是不同圖案、顏色的混合，立刻就倒掉。但很有趣的是，只要解釋怎麼切入，大多人都懂了，這表示問題不是出在無法理解規律性變化，而是對「規律」這兩個字的想像力不足。</div>
 <h3 class="draft-block draft--h3" name="header-27lsn">等差數列的「中項」，很多學生只抓到「中間的感覺」</h3>
 <div class="draft-block draft--p left">這章節，單純代公式的題目，幾乎都不會出錯，連公式都沒記，考不好算自己的問題。上述提到的，是對規律性的理解太死板，第二種常見的失誤在對「中項」的不理解，等差中項跟等比中項皆然，這算是對數列的理解不足，或是對數字的敏感度不夠。</div>
 <div class="draft-block draft--p left">例如，「1、2、3、4、5」是一個等差數列，中項是中間的3，所以等差中項可以用任意兩個公差一樣距離的項去平均。意思是：</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:265px" class="image-block-prerender" data-src="https://images.vocus.cc/970bf70c-404c-422c-9e94-15f9944866c5.png" data-width="265" data-height="140" data-position="center" src="https://images.vocus.cc/970bf70c-404c-422c-9e94-15f9944866c5.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/970bf70c-404c-422c-9e94-15f9944866c5.png" data-width="265" data-height="140" data-position="center" src="https://images.vocus.cc/970bf70c-404c-422c-9e94-15f9944866c5.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">看來沒問題對吧？問題可大了，根據經驗上，學生碰到的問題，都是抓那個數列中央的「感覺」，沒去理解<span style="font-weight: bold; ">中項可以這樣去代公式，是因為公差相等</span>。我們把每一項的定義代回去就知道 a<span style="font-style: italic; ">n</span>=a<span style="font-style: italic; ">1</span>+(n-1)╳d</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:732px" class="image-block-prerender" data-src="https://images.vocus.cc/5429c157-43f0-40d3-b104-3a216e959859.png" data-width="732" data-height="259" data-position="center" src="https://images.vocus.cc/5429c157-43f0-40d3-b104-3a216e959859.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/5429c157-43f0-40d3-b104-3a216e959859.png" data-width="732" data-height="259" data-position="center" src="https://images.vocus.cc/5429c157-43f0-40d3-b104-3a216e959859.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">嗯？這樣看不出的，學生可以理解那個2d，但很難抓到所謂「中間項就是兩邊加起來除以2」的感覺。很多老師會直接用「公差沒有一定要加或減」，讓上面的a1、a2、a3、a4、a5 變成 a-2d、a-d、a、a+d、a+2d</div>
 <div class="draft-block draft--p left">然後就死掉了。</div>
 <div class="draft-block draft--p left">對，學生倒掉的一片，因為他轉不過來，差不多在中段的學生，是無法很快理解為何可以把5項變成只有公差的差異，更不懂a是什麼意思。如果有師長對這轉折很難體會，請站在中間數學很普的學生立場去想，他前面都在記公式有首項a<span style="font-style: italic; ">1</span>，現在變成中間項是a，請給一點時間，或是多一兩個步驟去帶。</div>
@@ -65,7 +65,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">筆者在教這邊的時候，一開始是不會講a1、a2、a3項次這些，而是只用中文「第一項、第二項、第三項」，先建立順序的概念，然後再給予「每一項之間有固定的差，稱之為公差，數列為等差數列」。接著，就是慢慢但不停的灌輸，所謂的a1、a2、a3就跟未知數x、y、z很像，都是一種代數指稱。</div>
 <div class="draft-block draft--p left">亦即，先不馬上灌固定的範式，而是先讓學生抓到等差的感覺，不囿於固定的式子，後面會比較好處理。至於前中段的學生，如果學習單給的夠勤，解題時記得還是要把標準式寫上，轉換困難不大。以上這段主要式大概PR50上下的，數學腦袋轉不夠快的這類人。</div>
 <div class="draft-block draft--p left">此時，你再把a-2d、a-d、a、a+d、a+2d帶入</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:543px" class="image-block-prerender" data-src="https://images.vocus.cc/a7992a27-7be7-403b-ab09-f0e3111cc548.png" data-width="543" data-height="137" data-position="center" src="https://images.vocus.cc/a7992a27-7be7-403b-ab09-f0e3111cc548.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/a7992a27-7be7-403b-ab09-f0e3111cc548.png" data-width="543" data-height="137" data-position="center" src="https://images.vocus.cc/a7992a27-7be7-403b-ab09-f0e3111cc548.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">同學的神經接上去的反應會比較強烈些，而且這有一個很大的好處，就是轉變型態變成只有偶數項，或是只看某個特定項也容易懂。</div>
 <div class="draft-block draft--p left">例如</div>
 <div class="draft-block draft--p left">a2=(a1+a3)/2</div>
