--- a/_posts/2022-06-13-VOCUS-方格子電台-podcast-ep13-怎麼教小孩-小學中低年級篇.html
+++ b/_posts/2022-06-13-VOCUS-方格子電台-podcast-ep13-怎麼教小孩-小學中低年級篇.html
@@ -9,7 +9,7 @@ author: 王立第二戰研所
 ---
 
 <div class="draft-block draft--p left">每週一更新：教育文化、時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl4c4xx7w038301zg3c55h6kw/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/acf0f1e4-da65-4411-8977-2d52c15e6d31.jpg" data-width="1200" data-height="630" data-position="center" src="https://images.vocus.cc/acf0f1e4-da65-4411-8977-2d52c15e6d31.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">｜Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽｜</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/acf0f1e4-da65-4411-8977-2d52c15e6d31.jpg" data-width="1200" data-height="630" data-position="center" src="https://images.vocus.cc/acf0f1e4-da65-4411-8977-2d52c15e6d31.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">｜Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽｜</figcaption></div></figure>
 <div class="draft-block draft--quotesSpecial center"><div class="content">讀書很重要的一點是要能坐得住、靜得下來，<br>能定下心來念書的孩子，通常面對事情也會比較沈穩</div></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl4c4xx7w038301zg3c55h6kw/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
