--- a/_posts/2022-08-09-VOCUS-中學以下的素養教育與經驗談-國二下自然科-反應速率.html
+++ b/_posts/2022-08-09-VOCUS-中學以下的素養教育與經驗談-國二下自然科-反應速率.html
@@ -29,7 +29,7 @@ author: 王立第二戰研所
   <li class="draft-block draft--li">氣體：氣泡出現與否</li>
 </ul>
 <div class="draft-block draft--p left">所以，就結果來說，我們可以用上述的觀察，判斷反應物消失、生成物出現，去算一個速率如下：</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:500px" class="image-block-prerender" data-src="https://images.vocus.cc/370e7ee0-f36d-4a4d-bcd8-1c33f7aaac4f.jpg" data-width="500" data-height="80" data-position="center" src="https://images.vocus.cc/370e7ee0-f36d-4a4d-bcd8-1c33f7aaac4f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/370e7ee0-f36d-4a4d-bcd8-1c33f7aaac4f.jpg" data-width="500" data-height="80" data-position="center" src="https://images.vocus.cc/370e7ee0-f36d-4a4d-bcd8-1c33f7aaac4f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">現在很少考算速率，只會比快慢，就不用太擔心。</div>
 <h3 class="draft-block draft--h3" name="header-cmbke">實例、影片幫助理解碰撞學說</h3>
 <div class="draft-block draft--p left"><a href="https://zh.m.wikipedia.org/zh-tw/%E7%A2%B0%E6%92%9E%E7%90%86%E8%AE%BA" target="_blank" class="draft--a">碰撞學說</a>的解釋，筆者遇過有老師講不大好，聽起來應該是因為老師程度太好，表達的與學生吸收的有落差，類似台大第一名畢業的到偏鄉用資優班上法，筆者建議就是操作性的去看。</div>
