--- a/_posts/2023-03-23-VOCUS-街舞100-表演者決定表演者.html
+++ b/_posts/2023-03-23-VOCUS-街舞100-表演者決定表演者.html
@@ -52,4 +52,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">雖然很有趣，但《街舞100》這節目受到負評也不少，例如光是由同樣身為舞者的表演者投票，有人認為這個機制並不客觀，少了專業編舞家的意見，舞者的投票很可能流於個人觀點與喜好，對參賽選手並不公平。</div>
 <div class="draft-block draft--p left">也有人甚為節目很大的問題出在運鏡上，運鏡中很少有全景的鏡頭，無法看見編舞者的巧思，而且固定在幾個搶鏡的舞者身上，讓節目少了多元性，像是在哄抬一些人氣較高的舞者。</div>
 <div class="draft-block draft--p left">就我而言，我覺得《街舞100》這節目有一定的真實性，也可以大概看見所謂的表演圈子與舞蹈界，跳舞並非只有快快樂樂或感受舞蹈，當他是一項職業後你所要背負的東西就越多，這包含著人情世故與現實的打擊。裡面編舞家都不是無經驗出道，而是在許多競爭下有時候現實很殘酷，但反過來說，不外乎獲得真實舞者對你的回饋，讓你知道自己的編舞之路該怎麼走。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/uYzgGnJUM9s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/uYzgGnJUM9s"></iframe></div>
