--- a/_posts/2023-03-25-VOCUS-龍與地下城-盜賊榮耀-老牌trpg再搬大螢幕.html
+++ b/_posts/2023-03-25-VOCUS-龍與地下城-盜賊榮耀-老牌trpg再搬大螢幕.html
@@ -53,4 +53,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">《龍與地下城：盜賊榮耀》它其實是一個很簡單，甚至老套的奇幻喜劇冒險故事。但為何還是受到許多觀眾買帳，我認為因為粉絲經歷過許多驚悚的改編作，要的真的不多。大家只是想要一個簡單可以享受過去支持遊戲，看到許多影子的普通電影。</div>
 <div class="draft-block draft--p left">直接點說《龍與地下城：盜賊榮耀》的成功就是因為沒有搞一些亂七八糟遊戲外莫名其妙的東西，單純轉換遊戲在加入闔家歡樂的故事內容，讓它在許多可怕的改編中脫穎而出。</div>
 <div class="draft-block draft--p left">也許以奇幻元素來說《龍與地下城：盜賊榮耀》可能沒有一些史詩大作的奇幻文學來得讓人眼睛一亮，但是它展現出來的是老玩家對於裡面出現景物的共鳴感，和讓沒有接觸過這個經典桌上角色扮演遊戲的新人和觀眾有一個不差的印象，甚至可能是如今成為家長告訴小孩過去跑團的青春。故粉絲觀眾要求其實沒有太多，只是想看見一款遊戲在不同媒介重新展放異彩，也許不需要想太多，而是更加知道這群人為何死忠。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/kx63pxWMulE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/kx63pxWMulE"></iframe></div>
