--- a/_posts/2022-07-17-VOCUS-中學以下的素養教育與經驗談-國二下自然科-化學反應.html
+++ b/_posts/2022-07-17-VOCUS-中學以下的素養教育與經驗談-國二下自然科-化學反應.html
@@ -17,7 +17,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。</div>
 <blockquote class="draft-block draft--blockquote">太多學生會「望文生義」，像是「原子是最原本的那個子」，分子就是「切開後變原子」，很多老師會忘記學生腦補功力很強，尤其是讀一半的狀態。但這種情況，筆者也必須說有一半原因是老師講太快，或是以為聽懂了。</blockquote>
 <div><h3><a href="https://vocus.cc/article/626ff5d3fd89780001c1c9e6">中學以下的素養教育與經驗談：國二上自然科，原子與元素 | 王立第二戰研所 - vocus</a></h3><span>大部分同學在這邊遇到的問題不是看不懂，是背不起來，元素性質、名詞解釋，弄到昏頭轉向，所以太容易弄錯。欸，筆者只能說，加油。不是放生，是因為這裡的問題，最大最大的部分，是卡在各校進度不同。理論上，108課綱後，這章節的所有特性、定義，應該要力求簡單明瞭，不要太過混雜到學生無法理解。 物質, 化學, 理化, 自然科學, 素養教育, 原子, 元素, 學生, 電子, 問題, 化學, 經驗, 自然科, 物理, 同學, 案例, 108課綱</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F43e384f3-c9b4-4d7f-902f-12a31c5c52ab.jpg%26width%3D1200%26sign%3Di63MWhTLSL7y9uX6K2dHnGZr1TpCLdfGYFP1rnNqPdI&amp;width=550&amp;sign=AkHAgelOL-tTcfJUybw5ky-xOeeMV1ImfkCCzKtrfCs"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">國二下自然，理化進入到以化學為主的部分。</div>
 <div class="draft-block draft--p left">許多同學到這邊，稍微會覺得能喘口氣，因為多數題目似乎只要抓到一些原則，成績就不會太差。這會是錯覺嗎？</div>
 <div class="draft-block draft--p left">不是。</div>
@@ -33,10 +32,10 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">我們必須先讓學生記得，元素表中那些元素，單一顆原子只會產生「排列組合」，但本身那顆原子是不會變的。如果學生程度可以，建議稍微提一下，後面的離子涉及電子的移動，但因為電子太輕了，通常不會納入質量守恆的範圍去討論。謹記謹記，這是初學者，不要吹毛求疵。</div>
 <div class="draft-block draft--p left">若有教具請拿出來用，家長如果有空，請去文具店買大小不等的保麗龍球，真的很有空請著色（一般而言兩種顏色就夠了，第三種就是不上色），買一些針去連接起來。</div>
 <div class="draft-block draft--p left">大致上要建立這種概念：</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:899px" class="image-block-prerender" data-src="https://images.vocus.cc/86a1b06e-cff0-4fa2-80a4-422f30620e13.png" data-width="899" data-height="382" data-position="center" src="https://images.vocus.cc/86a1b06e-cff0-4fa2-80a4-422f30620e13.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/86a1b06e-cff0-4fa2-80a4-422f30620e13.png" data-width="899" data-height="382" data-position="center" src="https://images.vocus.cc/86a1b06e-cff0-4fa2-80a4-422f30620e13.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">反正，透過這種看來很蠢的方式，讓學生建立起反應前後，原子都不會改變的概念。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:900px" class="image-block-prerender" data-src="https://images.vocus.cc/57d98b82-b1b0-4926-a7a0-754eff592006.png" data-width="900" data-height="190" data-position="center" src="https://images.vocus.cc/57d98b82-b1b0-4926-a7a0-754eff592006.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
-<figure class="draft--imgNormal draft-block"><div><img style="height:640px" class="image-block-prerender" data-src="https://images.vocus.cc/26b93b60-ccb1-420c-8290-b80c7c259b6f.jpg" data-width="640" data-height="452" data-position="center" src="https://images.vocus.cc/26b93b60-ccb1-420c-8290-b80c7c259b6f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">（編：為什麼AB、A2B2不一樣，這應該算是一種例子……）</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/57d98b82-b1b0-4926-a7a0-754eff592006.png" data-width="900" data-height="190" data-position="center" src="https://images.vocus.cc/57d98b82-b1b0-4926-a7a0-754eff592006.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/26b93b60-ccb1-420c-8290-b80c7c259b6f.jpg" data-width="640" data-height="452" data-position="center" src="https://images.vocus.cc/26b93b60-ccb1-420c-8290-b80c7c259b6f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">（編：為什麼AB、A2B2不一樣，這應該算是一種例子……）</figcaption></div></figure>
 <div class="draft-block draft--p left">然後，再帶入汽水打開質量為何變少？因為二氧化碳跑掉了，以及封閉瓶子內怎樣變化質量均不變的概念，根據經驗效果較好，只是當然會花多一節課的時間。</div>
 <h3 class="draft-block draft--h3" name="header-ejqv4">建立反應過程中時間因素的基礎概念</h3>
 <div class="draft-block draft--p left">這邊常出現的一個問題，會嚴重影響到之後，就是時間順序。</div>
@@ -49,14 +48,14 @@ author: 王立第二戰研所
 <div class="draft-block draft--p center">A＋B→AB</div>
 <div class="draft-block draft--p left">在我們都知道是1個A原子對1個B原子變成1個AB分子下，確實如此。例如「5克的A加上10克的B，完全反應成為15克的AB」，原子分子量比就是1：2：3。</div>
 <div class="draft-block draft--p left">但如果是</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:900px" class="image-block-prerender" data-src="https://images.vocus.cc/10600655-58b0-4dfa-936b-b6b32c0ebbf2.png" data-width="900" data-height="148" data-position="center" src="https://images.vocus.cc/10600655-58b0-4dfa-936b-b6b32c0ebbf2.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/10600655-58b0-4dfa-936b-b6b32c0ebbf2.png" data-width="900" data-height="148" data-position="center" src="https://images.vocus.cc/10600655-58b0-4dfa-936b-b6b32c0ebbf2.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">當然不是呀，B有2顆應該要除2變成10才對。也就是透過上面這個例子，加上教育有實體的原子感覺，讓學生理解：「因為原子分子量本來就是單1顆在比，所以乘上100倍、1000倍的數量，比例都不會變」、「質量比會因為不知道1份物質中，參與反應的是幾顆，必須看到反應式才知道確實的比例」。</div>
 <div class="draft-block draft--p left">筆者必須說，這看來簡單實則很難，文字邏輯可以通的學生都在一半前面了，真的拿教具會比較好，人類有一半以上的比例，是對純文字邏輯的具象化有障礙。</div>
 <h3 class="draft-block draft--h3" name="header-e19k5">公式當口訣，拆解細節以便中後段學生熟悉</h3>
 <div class="draft-block draft--p left">莫耳要在前面都成功的前提上教才會順利，現在課本都有很好的圖示，讓學生知道莫耳就只是一個單位，跟一打、一車、一串的意思相同，就僅僅是個單位，只是這個單位的數量級很大，1莫耳有6╳10^23個這麼多。</div>
 <div class="draft-block draft--p left">務必建立「1打12個」、「1莫耳10^23個」的概念。</div>
 <div class="draft-block draft--p left">剩下的就是背公式跟練習：</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:600px" class="image-block-prerender" data-src="https://images.vocus.cc/4f7f8759-32cf-4f59-8ce7-1ffada57f614.png" data-width="600" data-height="88" data-position="center" src="https://images.vocus.cc/4f7f8759-32cf-4f59-8ce7-1ffada57f614.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/4f7f8759-32cf-4f59-8ce7-1ffada57f614.png" data-width="600" data-height="88" data-position="center" src="https://images.vocus.cc/4f7f8759-32cf-4f59-8ce7-1ffada57f614.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">問題在練習，建議從基礎開始，類似背口訣但內容是公式：</div>
 <ul>
   <li class="draft-block draft--li">「1莫耳的C原子有6╳10^23個，質量為12克」</li>
