--- a/_posts/2022-07-24-VOCUS-中學以下的素養教育與經驗談-國二下自然科-氧化還原.html
+++ b/_posts/2022-07-24-VOCUS-中學以下的素養教育與經驗談-國二下自然科-氧化還原.html
@@ -17,7 +17,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。</div>
 <blockquote class="draft-block draft--blockquote">國中的化學就真的掌握基本原則，其他都是背，不背就不會。筆者知道念化學的高手有人會不認同，畢竟化學死背怎麼念得好，總有很多可以活用的部分吧？對，沒錯，但在國中部分的基礎，沒有去背一些基本的，後面根本活不下去。</blockquote>
 <div><h3><a href="https://vocus.cc/article/62d3fb9bfd89780001a5300d">中學以下的素養教育與經驗談：國二下自然科，化學反應 | 王立第二戰研所 - vocus</a></h3><span>國中的化學就真的掌握基本原則，其他都是背，不背就不會。筆者知道念化學的高手有人會不認同，畢竟化學死背怎麼念得好，總有很多可以活用的部分吧？對，沒錯，但在國中部分的基礎，沒有去背一些基本的，後面根本活不下去。 化學, 分子, 原子, 化學反應, 國中自然科, 素養教育, 教育文化, 化學, 學生, 自然科, 經驗, 基礎, 問題, 同學, 108課綱, 國二, 3D</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Fd70c8902-e7e7-4940-8b09-da56c89c4657.jpg%26width%3D1200%26sign%3DbOGNvQpxmxiNAG9GUyERNftQc9ZLquqhzj7pGLQ1qPc&amp;width=550&amp;sign=7-vumOYDemOymegp8XxBgnj3lrAy_3VIppYf3J5msDU"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">雖然是很多同學炸掉的地方，但筆者覺得還好，這邊會出狀況，大致上有兩個可能。第一，沒有背，像是氧化燃燒的焰色。第二，前面反應式不夠熟。</div>
 <div class="draft-block draft--p left">背的東西，筆者這邊就不多講，課本跟講義多看幾次就對了，不然沒有背，誰會知道鋅燃燒偏黃綠色、硫的火焰偏淡紫色。</div>
 <div class="draft-block draft--p left">有些學校會先教，有些則不會，就是燃燒後的氧化物，哪一些會溶於水，水溶液呈現酸性或鹼性。筆者是建議早點教，畢竟都是背的東西，除了金屬氧化物溶於水呈鹼性、非金屬氧化物為酸性這個可以歸納外，太多強酸弱鹼的東西，沒去記真的就是不知道。</div>
@@ -27,7 +26,7 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-4hk59">氧化還原第一關：氧化劑使別人氧化，還原劑使別人還原</h3>
 <div class="draft-block draft--p left">至於氧化跟還原反應，很多同學會弄到七葷八素，十之八九是出在弄不清名詞的意義，諸如「氧化反應」、「氧化物」、「被氧化」到底差在哪。</div>
 <div class="draft-block draft--p left">筆者這邊借用認識的老師，他常用的教法來解釋。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:419px" class="image-block-prerender" data-src="https://images.vocus.cc/603c6ade-6a48-4491-aa73-849aca5d0ccd.jpg" data-width="419" data-height="190" data-position="center" src="https://images.vocus.cc/603c6ade-6a48-4491-aa73-849aca5d0ccd.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/603c6ade-6a48-4491-aa73-849aca5d0ccd.jpg" data-width="419" data-height="190" data-position="center" src="https://images.vocus.cc/603c6ade-6a48-4491-aa73-849aca5d0ccd.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">大致的解說流程：</div>
 <ol>
   <li class="draft-block draft--li">A進行氧化反應變成AO</li>
