--- a/_posts/2023-03-27-INITIUM-法国退休金改革为何是死局-马克龙犯了什麽错.html
+++ b/_posts/2023-03-27-INITIUM-法国退休金改革为何是死局-马克龙犯了什麽错.html
@@ -9,7 +9,7 @@ author: 洪颢庭
 ---
 
 <p>「法国所有工会更罕见地联合举行大罢工，部份示威者更反其道而行，要求法国降低退休金年龄至60岁。」</p><p>洪颢庭</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230327-opinion-france-retirement-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/e1823bb1d58a4b1790a02dca69e77a7d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年3月23日，法国南特，法国养老金改革的示威活动中，一名蒙面示威者站在燃烧的垃圾桶旁。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年3月23日，法国南特，法国养老金改革的示威活动中，一名蒙面示威者站在燃烧的垃圾桶旁。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p><strong>（洪颢庭，ITSS Verona及香港国际问题研究所研究员）</strong></p>
+            <figcaption itemprop="caption">2023年3月23日，法国南特，法国养老金改革的示威活动中，一名蒙面示威者站在燃烧的垃圾桶旁。<span class="credit">摄：Stephane Mahe/Reuters/达志影像</span></figcaption></figure><p><strong>（洪颢庭，ITSS Verona及香港国际问题研究所研究员）</strong></p>
 <p>法国总理博尔内（Elisabeth Borne）于2023年1月10公布法国总统马克龙（Emmanuel Macron）的退休金制度改革方案。此方案提议将领取退休金的年龄从62岁推迟至64岁。虽然马克龙强调其他民主国家的退休金年龄都比法国高，甚至比拟议的64岁高，但这亦无法帮助马克龙争取民众支持，有民调更显示68%的法国民众均反对马克龙的方案。最终法国连续爆发多波大规模抗议，法国所有的工会更罕见地联合举行大罢工，部份示威者更反其道而行，要求法国降低退休金年龄至60岁。</p>
 <p>随着医疗技术进步，人均寿命亦随年递增，不少国家亦因而推迟了退休年龄。目前法国亦面对退休金系统财政压力庞大的问题，故马克龙推行改革方案看似理所当然。然而，法国政治文化向来反对延长退休年龄，马克龙若想通过法案就少不免招来强烈反对。纵然马克龙已决定动用宪法条款，绕过法会通过法案，这亦只会造成更多不满，为其政治生涯蒙上更大污点。</p>
 <h2>社会保障塑造民族认同</h2>
