--- a/_posts/2023-03-26-INMEDIA-將軍澳反填海遊行-80人手拉封鎖線前行-警事前提醒勿有政治性言論.html
+++ b/_posts/2023-03-26-INMEDIA-將軍澳反填海遊行-80人手拉封鎖線前行-警事前提醒勿有政治性言論.html
@@ -21,7 +21,7 @@ author: 獨媒報導
 <p>陳展浚透露，警方事前對標語、口號、參加者衣著等均有要求：「海報、宣傳牌、文宣，甚至屋苑發出的每一張通告，他們（警方）事前都看過」他指警方沒有否決遊行標語，但有提醒不要叫喊政治性言論。他相信警方是對首次遊行沒有信心，才作一系列嚴謹的要求，不希望成為慣例。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/k5LS5s55og" title="DSC_0002"><img src="https://live.staticflickr.com/65535/52772043563_6e0fbf8d56.jpg" width="500" alt="DSC_0002" /></a></p>
 <p><strong>有自稱業委會人士發信反對遊行  陳展浚斥行為垃圾</strong></p>
-<p>昨日有傳媒報道，有自稱「都會駅業委會員及代表」人士發信，稱會方從未授權葉寶儀申請遊行。信中強調，業委會是一班「愛國愛港的委員」，又斥遊行人士「一直與黑暴過從甚密」，要求警方徹查事件並煞停遊行。</p>
+<p>有自稱「都會駅業委會員及代表」人士發信（見下），稱會方從未授權葉寶儀申請遊行。信中強調，業委會是一班「愛國愛港的委員」，又斥遊行人士「一直與黑暴過從甚密」，要求警方徹查事件並煞停遊行。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/B948Dws8pA" title="DSC_0055"><img src="https://live.staticflickr.com/65535/52772044008_ccd1e1d186.jpg" width="500" alt="DSC_0055" /></a><br /><em>「將軍澳民生關注組」召集人陳展浚</em></p>
 <p>陳展浚回應指，業委會早以過半數通過授權葉寶儀為代表舉辦遊行，懷疑有人基於私人因怨阻礙遊行，涉嫌偽造文書盜用業委會身份，「我覺得呢啲行為簡直係垃圾」，委員正考慮採取法律行動。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5a0903KM7Y" title="DSC_9529"><img src="https://live.staticflickr.com/65535/52771815949_70170df62e.jpg" width="500" alt="DSC_9529" /></a></p>
@@ -30,4 +30,14 @@ author: 獨媒報導
 發展局發言人回應指，尊重市民表達意見的權利，近日已主動透過不同渠道收集居民意見，包括出席區議會會議、舉行居民會面活動和出席地區領袖主辦的居民大會。局方稱，會直接面對面向居民解釋6個設施的功能和必要性，以及相關紓解措施以減低影響，包括設施將遠離最近屋苑至少一公里。<br />
  <br />
 此外，發展局會研究盡量採用削坡方式以減少填海面積，並考慮將部分設施遷入岩洞的可行性。當局會確保6個設施的設計、外觀和營運都不會具厭惡性或為社區帶來滋擾。</p>
-</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/DTC1tGJSF8" title="337169317_103065202745652_951655095330163789_n"><img src="https://live.staticflickr.com/65535/52773615206_38b600329c_c.jpg" width="800" alt="337169317_103065202745652_951655095330163789_n" /></a><br /><em>發展局圖片</em></p>
+<p><strong>自稱「都會駅業委會員及代表」人士的信件節錄</strong></p>
+<blockquote><p>我們是調景嶺都會駅業委會的委員及代表。鑑於警方批准屋苑業委會前主席葉寶儀2023年3月26日舉行「反對將軍澳132區填海」遊行的申請，我們現向　閣下澄清業委會及我們的立場，以正視聽。</p>
+<p>首先，是次遊行的申請人葉寶儀經已在2023年3月17日晚的業主大會上落選業委代表。根據都會駅公契，葉寶儀已經不是業主委員。她在喪失業委資格後，仍代表業委會向警方處理遊行的申請，實在有誤導警方之嫌。</p>
+<p>第二，在2023年3月17日業主大會後，新一屆業委會至今仍未召開，而委員們從來亦沒有就此遊行進行討論或決議。換言之，現屆業委會從來沒有授權葉寶儀或其餘人等申請此遊行，而上屆業委會的授權亦已於2023年3月17日晚上業主大會完結後失效。</p>
+<p>第三，葉寶儀或其他協助申請的人士並不代表我們的立場。我們是一班愛國愛港的委員，我們一直擁護基本法及國家安全法、支持中央政府、支持特區政府依法施政。相反，葉寶儀、聯絡人李栢棠及有關人等一直與黑暴過從甚密，甚至曾援引反對黨進入屋苑宣傳，我們對此堅決反對。</p>
+<p>由於我們懷疑有關遊行的申請人涉嫌向警方提供不實資料、誤導警方，從而令　 閣下批准是次遊行，我們強烈要求警方徹查此事件，並刹停有關遊行，以正視聽。我們不希望被暴徒代表，而這些暴徒亦不代表我們。</p>
+<p>「都會／城中新參選團隊」<br />
+1座代表傅勝陽、2座委員吳玉玲、3座委員、5座及停車場委員李永強、<br />
+7座代表蔡小娟、8座代表、9座代表招永達、10座委員謝張玉琼啟</p>
+</blockquote></div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
