--- a/_posts/2023-03-27-INITIUM-早报-37岁巴基斯坦裔尤萨夫将成为苏格兰首席部长.html
+++ b/_posts/2023-03-27-INITIUM-早报-37岁巴基斯坦裔尤萨夫将成为苏格兰首席部长.html
@@ -49,8 +49,8 @@ author:
 <p>莉莉安娜·卡瓦尼现年90岁，曾拍摄过《弗朗西斯的阿西西》（Francesco d'Assisi，1966）、《伽利略》（Galileo，1968）、《食人族之年》（I cannibali，1970）等众多影片。</p>
 <p>阿尔贝托·巴贝拉评价她是1960年代新意大利电影最具代表性的人物之一，其作品跨越了60多年的演艺历史。她是一位全才型艺术家，频繁在电视、剧院和歌剧中亮相，她的电影以其脱俗精神和智慧积淀而闻名。</p>
 <h3>博尔赫斯遗孀玛丽亚·儿玉离世，终年86岁</h3>
-<p>阿根廷作家和翻译家<a href="https://buenosairesherald.com/culture-ideas/author-maria-kodama-dies-at-86">玛丽亚·玉儿（María Kodama）周日离世</a>，终年86岁。她是阿根廷作家博尔赫斯（Jorge Luis Borges）的遗孀。37年前博尔赫斯去世时也是86岁。</p>
-<p><a href="https://en.wikipedia.org/wiki/Mar%C3%ADa_Kodama">玛丽亚·玉儿</a>1937年生于布宜诺斯艾利斯，学习文学期间与博尔赫斯相识。两人都喜欢英语文学，1975年作为同事前往美国，合作编写了《盎格鲁·撒克逊文学入门》（Brief Anglo-Saxon Anthology，1978）和《地图册》（Atlas，1984） 。</p>
-<p>1986年4月26日，玛丽亚·玉儿与博尔赫斯在巴拉圭结婚。同年6月14日，博尔赫斯在瑞士日内瓦死于癌症。</p>
-<p>玛丽亚·玉儿成为博尔赫斯作品的版权所有人，1988年在布宜诺斯艾利斯创立了博尔赫斯国际基金会。</p>
-<p>玛丽亚·玉儿的个人作品包括《故事》（Relatos）、《向博尔赫斯致敬》（Homenaje a Borges）和《打孔的徽章》（La divisa punzó）等。</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+<p>阿根廷作家和翻译家<a href="https://buenosairesherald.com/culture-ideas/author-maria-kodama-dies-at-86">玛丽亚·儿玉（María Kodama）周日离世</a>，终年86岁。她是阿根廷作家博尔赫斯（Jorge Luis Borges）的遗孀。37年前博尔赫斯去世时也是86岁。</p>
+<p><a href="https://en.wikipedia.org/wiki/Mar%C3%ADa_Kodama">玛丽亚·儿玉</a>1937年生于布宜诺斯艾利斯，学习文学期间与博尔赫斯相识。两人都喜欢英语文学，1975年作为同事前往美国，合作编写了《盎格鲁·撒克逊文学入门》（Brief Anglo-Saxon Anthology，1978）和《地图册》（Atlas，1984） 。</p>
+<p>1986年4月26日，玛丽亚·儿玉与博尔赫斯在巴拉圭结婚。同年6月14日，博尔赫斯在瑞士日内瓦死于癌症。</p>
+<p>玛丽亚·儿玉成为博尔赫斯作品的版权所有人，1988年在布宜诺斯艾利斯创立了博尔赫斯国际基金会。</p>
+<p>玛丽亚·儿玉的个人作品包括《故事》（Relatos）、《向博尔赫斯致敬》（Homenaje a Borges）和《打孔的徽章》（La divisa punzó）等。</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
