--- a/_posts/2023-03-26-PQ-害怕中國跟俄羅斯聯手-西班牙總理-法國總統及歐盟執委主席紛紛訪中.html
+++ b/_posts/2023-03-26-PQ-害怕中國跟俄羅斯聯手-西班牙總理-法國總統及歐盟執委主席紛紛訪中.html
@@ -24,7 +24,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-1024x676.jpg" alt="" class="wp-image-130950" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-1024x676.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-300x198.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-768x507.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）.jpg 1242w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>法國總統馬克宏預計在 4 月 4 日訪問中國，歐盟執委會主席范德賴恩會與他同行。（圖／范德賴恩推特）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-1024x676.jpg" alt="" class="wp-image-130950" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-1024x676.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-300x198.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）-768x507.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/933f0c0a-法國總統馬克宏、歐盟執委會主席范德賴恩（圖／范德賴恩推特）.jpg 1242w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>法國總統馬克宏預計在 4 月 4 日訪問中國，歐盟執委會主席范德賴恩會與他同行。（圖／范德賴恩推特）</figcaption></figure>
 
 
 
