--- a/_posts/2023-03-28-INMEDIA-專訪-又係女司機-編導譚安婷-汽車不止屬於男人-盼打破性別定型.html
+++ b/_posts/2023-03-28-INMEDIA-專訪-又係女司機-編導譚安婷-汽車不止屬於男人-盼打破性別定型.html
@@ -27,7 +27,7 @@ author: 獨媒報導
 <p>不過，她認為不少性別定型仍隱暱於生活角落。「意外之後，我爸爸問我有無即刻say sorry嗲吓佢，我諗返轉頭，我當時係好低音咁話報警，好冷靜。原來我好抗拒（爸爸所講）呢種方式去表達，好似係脆弱同有承擔嘅分別。」</p>
 <p><strong>獨立自主 是性別爭議的出路</strong></p>
 <p>從小到大，譚安婷「討厭粉紅色，唔鍾意花，唔食甜品」；長大後開始講粗口，屋企人也說「女仔之家唔好講咁多」。她微笑地質疑——為何女生就要着裙、斯文？為什麼男生一定要載女生回家，如果以女生載男生，就代表他沒有女生那麼能幹？她感慨地說：「香港社會對男女都很高要求啊！」</p>
-<p>譚安婷穿著黑色長裙，臉頰旁吊著兩個金色圓形耳環。記者拍攝之前，她從手袋拿出紅色唇膏，塗抹幾下。這個食煙又喜歡揸車的女生，也有愛美的一面。</p>
+<p>譚安婷穿著黑色長裙，臉頰旁吊著兩個金色圓形耳環。記者拍攝之前，她從手袋拿出紅色唇膏，塗抹幾下。這個講粗口又喜歡揸車的女生，也有愛美的一面。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/z98db0848t" title="IMG_8727"><img src="https://live.staticflickr.com/65535/52773507692_d837826b3c_b.jpg" width="1024" alt="IMG_8727" /></a><br /><em>譚安婷與她喜愛的Nissan Cube</em></p>
 <p>她帶記者到賽馬會創意藝術中心外的白田街，展示她外型精繳的Nissan Cube。她說：「車作為媒介，其實很男性化。我們常說『男人唔係講車，就係手錶、女人』，用這三樣東西去概括一生成就。那麼我就想，車對於女人來說是什麼？我媽媽也揸車，外公更是揸巴士。我媽媽常說，我揸車咁叻一定是遺傳自公公，令我認為汽車就是成熟、大人的事。」</p>
 <p>被問到解決性別定型的問題，譚安婷覺得女性要學習獨立，男性要放下物質主義：「如果架車有問題，我欣賞女仔可以自己解決，就算唔識搞，都打開車頭蓋望吓咩事、打電話，態度唔係下下要求男人，可以獨立自處。」至於男性就不需對自己過分苛刻，就像Benz創辦人一樣，與太太一起研究燃油車，甚至鼓勵她駕駛，不會感到甚麼不舒服。</p>
