--- a/_posts/2023-03-27-PQ-雙重承認-外交部僅強調不排除任何交往-中華民國外交才是只能做不能說.html
+++ b/_posts/2023-03-27-PQ-雙重承認-外交部僅強調不排除任何交往-中華民國外交才是只能做不能說.html
@@ -16,7 +16,7 @@ author: Translation Matters 翻譯有要緊
 
 
 
-<p>而現場《自由時報》記者的提問，是引用日前外交部俞大㵢次長接受外媒專訪時提到，歡迎阿根廷與中國和台灣同時交往，的說法來詢問吳部長這「是不是代表外交部現在是正式支持而且鼓勵各國雙重承認中國和台灣」。</p>
+<p>而現場《自由時報》記者的提問，是引用日前外交部俞大㵢次長接受外媒專訪時提到，歡迎阿根廷與中國和台灣同時交往的說法來詢問吳部長，記者問：「是不是代表外交部現在是正式支持，而且鼓勵各國雙重承認中國和台灣？」</p>
 
 
 
@@ -48,7 +48,7 @@ author: Translation Matters 翻譯有要緊
 
 
 
-<p>而正如吳部長所回答的，如果「有任何的國家希望能夠跟我們提升我們的關係」，如果提升到建交承認且與中國也有建交，那麼這個同時交往等於是「同時建交」。</p>
+<p>而正如吳部長所回答的，如果『有任何的國家希望能夠跟我們提升我們的關係』，假使台灣提升到建交承認且與中國也有建交，那麼這個同時交往等於是「同時建交」。</p>
 
 
 
@@ -92,11 +92,11 @@ author: Translation Matters 翻譯有要緊
 
 
 
-<p>根據司法院的解釋「雙重承認」是在一個中國的前提下，那麼如果不是在這一個前提之下，中國和台灣能不能同時被承認，也就是指沒有一個中國這個前提的「同時承認」，即台灣能不能被國際同時承認是一個主權獨立的國家，在政治上與一個中國完全沒有關係。</p>
+<p>根據司法院的提案理由論及「雙重承認」是在一個中國的前提下，那麼如果不是在這一個前提之下，中國和台灣能不能同時被承認，也就是指沒有一個中國這個前提的「同時承認」，即台灣能不能被國際同時承認是一個主權獨立的國家，在政治上與一個中國完全沒有關係。</p>
 
 
 
-<p>雙重承認的原文字用 dual 這個字，dual 有兩個意思，一個是文字上的「二」，一個是「包含二」或者「一分為二」的意思。對於一個主權國家的承認代表的承認一個獨立的國家人格，因此一分為二的承認在實際實踐上就是兩個獨立的國家人格。但一分為二在意義上也表示是曾經合而為一，放在中國與台灣的歷史脈絡下，是否曾經是合而為一的同一個國家呢？這又牽扯到 1945 年到 1949 年這段時間台灣真正的地位說法不一。</p>
+<p>雙重承認的原文字用 dual 這個字，dual 有兩個意思，一個是文字上的「二」，一個是「包含二」或者「一分為二」的意思。對一個主權國家作出承認即代表著承認一個獨立的國家人格，因此一分為二的承認在實際實踐上就是兩個獨立的國家人格。但一分為二在意義上也表示是曾經合而為一，放在中國與台灣的歷史脈絡下，是否曾經是合而為一的同一個國家呢？這又牽扯到 1945 年到 1949 年這段時間台灣真正的地位說法不一。</p>
 
 
 
