--- a/_posts/2023-03-28-PQ-安倍晉三影像展開幕-泉裕泰-努力締造日後100年台日友好關係.html
+++ b/_posts/2023-03-28-PQ-安倍晉三影像展開幕-泉裕泰-努力締造日後100年台日友好關係.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053.jpg" alt="" class="wp-image-131134" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053-300x167.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053-768x427.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>由國策研究院主辦的安倍晉三紀念影像展 27 日開展，總統蔡英文（中）與文化部長史哲（右起）、總統府祕書長林佳龍、行政院副院長鄭文燦、國策院董事長田弘茂、台灣駐日代表謝長廷（左 3）、日本台灣交流協會台北事務所代表泉裕泰（左 4）等嘉賓出席開幕式並合影／圖：中央社記者王騰毅攝 2023 年 3 月 27 日。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053.jpg" alt="" class="wp-image-131134" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053-300x167.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/c7c5a7b3-1383x768_wmky_0_c20230327000053-768x427.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>由國策研究院主辦的安倍晉三紀念影像展 27 日開展，總統蔡英文（中）與文化部長史哲（右起）、總統府祕書長林佳龍、行政院副院長鄭文燦、國策院董事長田弘茂、台灣駐日代表謝長廷（左 3）、日本台灣交流協會台北事務所代表泉裕泰（左 4）等嘉賓出席開幕式並合影／圖：中央社記者王騰毅攝 2023 年 3 月 27 日。</figcaption></figure></div>
 
 
 
